--- a/Projecct/MDK/Objects/KEA128.build_log.htm
+++ b/Projecct/MDK/Objects/KEA128.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  03/19/2018
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'KEA128'
-compiling main.c...
+compiling speed.c...
 linking...
-Program Size: Code=13408 RO-data=8616 RW-data=352 ZI-data=1328  
+Program Size: Code=13480 RO-data=8616 RW-data=360 ZI-data=1328  
 ".\Objects\KEA128.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
