--- a/Projecct/MDK/Objects/KEA128.htm
+++ b/Projecct/MDK/Objects/KEA128.htm
@@ -3,11 +3,11 @@
 <title>Static Call Graph - [.\Objects\KEA128.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\KEA128.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Mon Mar 19 13:54:19 2018
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Mon Mar 19 14:43:48 2018
 <BR><P>
-<H3>Maximum Stack Usage =        248 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
+<H3>Maximum Stack Usage =        256 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
-PIT_CH0_IRQHandler &rArr; duty_5ms &rArr; duty_angle &rArr; angle_get &rArr; QingHua_AngleCalaulate &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
+PIT_CH0_IRQHandler &rArr; duty_5ms &rArr; duty_turn &rArr; get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 <P>
 <H3>
 Mutually Recursive functions
@@ -305,7 +305,6 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[31]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fadd
 </UL>
 <BR>[Called By]<UL><LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;QingHua_AngleCalaulate
-<LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 <LI><a href="#[8d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_pwm
 <LI><a href="#[6b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;KEY_SCAN
@@ -345,7 +344,6 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[32]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_float_epilogue
 </UL>
 <BR>[Called By]<UL><LI><a href="#[87]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;angle_get
-<LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 </UL>
 
@@ -376,7 +374,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[3a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;_double_epilogue
 </UL>
-<BR>[Called By]<UL><LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
+<BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
+<LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 <LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
 
@@ -421,7 +420,8 @@ Global Symbols
 </UL>
 <BR>[Calls]<UL><LI><a href="#[3c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dadd
 </UL>
-<BR>[Called By]<UL><LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
+<BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
 
 <P><STRONG><a name="[41]"></a>__aeabi_drsub</STRONG> (Thumb, 12 bytes, Stack size 8 bytes, dadd.o(.text), UNUSED)
@@ -435,6 +435,7 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[87]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;angle_get
 <LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;QingHua_AngleCalaulate
+<LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 <LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
@@ -459,11 +460,11 @@ Global Symbols
 <BR>[Calls]<UL><LI><a href="#[45]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_llsr
 </UL>
 <BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
 
 <P><STRONG><a name="[82]"></a>__aeabi_f2d</STRONG> (Thumb, 40 bytes, Stack size 0 bytes, f2d.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;QingHua_AngleCalaulate
+<LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 </UL>
 
@@ -471,10 +472,12 @@ Global Symbols
 
 <P><STRONG><a name="[92]"></a>__aeabi_cdcmple</STRONG> (Thumb, 38 bytes, Stack size 0 bytes, cdcmple.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
 
 <P><STRONG><a name="[91]"></a>__aeabi_cdrcmple</STRONG> (Thumb, 38 bytes, Stack size 0 bytes, cdrcmple.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
+<LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
 </UL>
 
 <P><STRONG><a name="[46]"></a>__aeabi_d2f</STRONG> (Thumb, 56 bytes, Stack size 8 bytes, d2f.o(.text))
@@ -484,6 +487,7 @@ Global Symbols
 </UL>
 <BR>[Called By]<UL><LI><a href="#[87]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;angle_get
 <LI><a href="#[81]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;QingHua_AngleCalaulate
+<LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
 </UL>
 
@@ -863,7 +867,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[1c]"></a>PIT_CH0_IRQHandler</STRONG> (Thumb, 20 bytes, Stack size 8 bytes, isr.o(i.PIT_CH0_IRQHandler))
-<BR><BR>[Stack]<UL><LI>Max Depth = 248<LI>Call Chain = PIT_CH0_IRQHandler &rArr; duty_5ms &rArr; duty_angle &rArr; angle_get &rArr; QingHua_AngleCalaulate &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
+<BR><BR>[Stack]<UL><LI>Max Depth = 256<LI>Call Chain = PIT_CH0_IRQHandler &rArr; duty_5ms &rArr; duty_turn &rArr; get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 </UL>
 <BR>[Calls]<UL><LI><a href="#[80]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_5ms
 </UL>
@@ -983,7 +987,7 @@ Global Symbols
 </UL>
 
 <P><STRONG><a name="[80]"></a>duty_5ms</STRONG> (Thumb, 80 bytes, Stack size 8 bytes, control.o(i.duty_5ms))
-<BR><BR>[Stack]<UL><LI>Max Depth = 240<LI>Call Chain = duty_5ms &rArr; duty_angle &rArr; angle_get &rArr; QingHua_AngleCalaulate &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
+<BR><BR>[Stack]<UL><LI>Max Depth = 248<LI>Call Chain = duty_5ms &rArr; duty_turn &rArr; get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 </UL>
 <BR>[Calls]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 <LI><a href="#[8b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_speed
@@ -1018,7 +1022,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[80]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_5ms
 </UL>
 
-<P><STRONG><a name="[8b]"></a>duty_speed</STRONG> (Thumb, 770 bytes, Stack size 48 bytes, speed.o(i.duty_speed))
+<P><STRONG><a name="[8b]"></a>duty_speed</STRONG> (Thumb, 774 bytes, Stack size 48 bytes, speed.o(i.duty_speed))
 <BR><BR>[Stack]<UL><LI>Max Depth = 176<LI>Call Chain = duty_speed &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 </UL>
 <BR>[Calls]<UL><LI><a href="#[6c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;gpio_get
@@ -1044,17 +1048,20 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[80]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_5ms
 </UL>
 
-<P><STRONG><a name="[8c]"></a>duty_turn</STRONG> (Thumb, 104 bytes, Stack size 24 bytes, turn.o(i.duty_turn))
-<BR><BR>[Stack]<UL><LI>Max Depth = 224<LI>Call Chain = duty_turn &rArr; get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
+<P><STRONG><a name="[8c]"></a>duty_turn</STRONG> (Thumb, 130 bytes, Stack size 48 bytes, turn.o(i.duty_turn))
+<BR><BR>[Stack]<UL><LI>Max Depth = 240<LI>Call Chain = duty_turn &rArr; get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 </UL>
 <BR>[Calls]<UL><LI><a href="#[70]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fmul
 <LI><a href="#[36]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fdiv
-<LI><a href="#[34]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fsub
+<LI><a href="#[82]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_f2d
+<LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dmul
+<LI><a href="#[46]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_d2f
 <LI><a href="#[38]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2f
-<LI><a href="#[37]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_i2f
 <LI><a href="#[88]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cfrcmple
 <LI><a href="#[89]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cfcmple
+<LI><a href="#[40]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dsub
 <LI><a href="#[93]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;get_track
+<LI><a href="#[3b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2d
 </UL>
 <BR>[Called By]<UL><LI><a href="#[80]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_5ms
 </UL>
@@ -1118,8 +1125,8 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[26]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[93]"></a>get_track</STRONG> (Thumb, 910 bytes, Stack size 72 bytes, turn.o(i.get_track))
-<BR><BR>[Stack]<UL><LI>Max Depth = 200<LI>Call Chain = get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
+<P><STRONG><a name="[93]"></a>get_track</STRONG> (Thumb, 940 bytes, Stack size 64 bytes, turn.o(i.get_track))
+<BR><BR>[Stack]<UL><LI>Max Depth = 192<LI>Call Chain = get_track &rArr; __aeabi_dmul &rArr; _double_epilogue &rArr; __aeabi_llsr
 </UL>
 <BR>[Calls]<UL><LI><a href="#[98]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;adc_once
 <LI><a href="#[39]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_i2d
@@ -1129,7 +1136,6 @@ Global Symbols
 <LI><a href="#[34]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fsub
 <LI><a href="#[31]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_fadd
 <LI><a href="#[71]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_f2uiz
-<LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_d2iz
 <LI><a href="#[38]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2f
 <LI><a href="#[88]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cfrcmple
 <LI><a href="#[89]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cfcmple
@@ -1140,6 +1146,8 @@ Global Symbols
 <LI><a href="#[40]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_dsub
 <LI><a href="#[43]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ddiv
 <LI><a href="#[3b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_ui2d
+<LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cdrcmple
+<LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cdcmple
 </UL>
 <BR>[Called By]<UL><LI><a href="#[8c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;duty_turn
 </UL>
